--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -37,6 +37,7 @@ body{
     font-weight: 300;
     letter-spacing: 0.015em;
     position: relative;
+    overflow-x: hidden;
 }
 
 a{
